# dapr_demo

./: CMakeLists.txt  README.md  build.sh  proto.sh
proto/: CMakeLists.txt  mathtest.proto
src/: CMakeLists.txt  dapr_publish.cpp  dapr_subscribe.cpp  grpc_cli.cpp  grpc_svr.cpp  test_grpc_cli.cpp  test_grpc_svr.cpp  test_publish.cpp  test_state.cpp  test_subscribe.cpp
